--- a/styles.css
+++ b/styles.css
@@ -178,3 +178,14 @@
     align-items : center;
     width: 300px;
 }
+@media  screen and (max-width : 970px)  {
+    .outerDiv{
+        margin-top:100px;
+        width : 500px;
+        height : 1000px;
+        display : flex;
+        flex-direction : column;
+        border-radius : 10%;
+        box-shadow : 5px 5px 5px 5px whitesmoke;
+    }
+}
